# hf-coding-assessment

./: README.md  pyproject.toml
lambdas/get_bad_actor_assessment/: __init__.py  get_bad_actor_assessment.py
lambdas/post_bad_actor_assessment/: __init__.py
shared_lambda_layer/apis/: __init__.py  get_user_from_auth0.py  get_users.py  post_user_assessment.py
tests/resources/: mock_get_users_response.py
